yet more refining. will probably finish tomorrow